# keycloack-oauth

./: Dockerfile  docker-compose.yml  keycloack.conf  nginx.conf  pyproject.toml  start.sh  todoist-app.json
frontend/: Dockerfile  Dockerfile.dev  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: Analytics.vue  UserInfo.vue
frontend/src/services/: api.js  auth.js
kc_scripts/: location-external.js  location-onprem.js
src/todoist/: app.py  auth.py  models.py  routes.py  settings.py
